--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ description = "Argon Language Interpreter - Compiles Argon to LLVM IR"
 authors = ["TheFahmi"]
 
 [dependencies]
+rustc-hash = "1.1"
 
 [[bin]]
 name = "argon"
@@ -14,3 +15,5 @@ path = "src/main.rs"
 [profile.release]
 opt-level = 3
 lto = true
+codegen-units = 1
+panic = "abort"
