feat: Native database clients for PostgreSQL and MySQL
IMPLEMENTATIONS:
1. stdlib/postgres_native.ar - PostgreSQL wire protocol v3.0
   - pg_connect(host, port, user, database)
   - pg_query(conn, sql) → PgResult
   - pg_close(conn)
   - Fully working with trust auth mode ✅

2. stdlib/mysql_native.ar - MySQL wire protocol
   - mysql_connect(host, port, user, pass, db)
   - mysql_query(conn, sql) → MySqlResult
   - mysql_close(conn)
   - TCP handshake works, auth needs SHA1 hash ⚠️

3. New interpreter built-ins for binary protocols:
   - @tcp_write_raw(conn, byte_array)
   - @tcp_read_raw(conn, count) → byte array
   - @tcp_read_available(conn) → byte array
   - @chr(n) / @ord(s)
   - @bytes_to_string / @string_to_bytes

DOCKER: Changed to MariaDB 10.11 for better compatibility

TEST RESULTS:
- PostgreSQL: ALL TESTS PASS ✅
  - CREATE/DROP TABLE
  - INSERT/UPDATE/DELETE
  - SELECT with row count

- Redis: ALL TESTS PASS ✅
  - Full RESP protocol support

- MySQL: TCP connects, auth pending SHA1 implementation

--- a/docker-compose.db.yml
+++ b/docker-compose.db.yml
@@ -8,6 +8,7 @@ services:
       POSTGRES_USER: argon
       POSTGRES_PASSWORD: argon123
       POSTGRES_DB: argondb
+      POSTGRES_HOST_AUTH_METHOD: trust
     ports:
       - "5432:5432"
     volumes:
@@ -19,7 +20,7 @@ services:
       retries: 5
 
   mysql:
-    image: mysql:8.0
+    image: mariadb:10.11
     container_name: argon-mysql
     environment:
       MYSQL_ROOT_PASSWORD: root123
@@ -31,7 +32,7 @@ services:
     volumes:
       - mysql_data:/var/lib/mysql
     healthcheck:
-      test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
+      test: ["CMD", "mariadb-admin", "ping", "-h", "localhost", "-uroot", "-proot123"]
       interval: 5s
       timeout: 5s
       retries: 5
