feat(jit): Add Cranelift-based JIT compilation
JIT Compilation module (src/jit.rs):
- Cranelift JIT integration for native code generation
- Hot path detection with configurable threshold (default: 100 calls)
- Simple function compilation (identity, double, square, increment, negate)
- Custom operations chain (add, sub, mul, div)
- Native code execution via function pointers
- JitCompiler struct with statistics tracking

Dependencies added:
- cranelift 0.95
- cranelift-jit 0.95
- cranelift-codegen 0.95
- cranelift-module 0.95
- cranelift-frontend 0.95
- cranelift-native 0.95
- target-lexicon 0.12

Test Results: 3/3 JIT tests passed
- test_jit_compile_double: 21 * 2 = 42 ✓
- test_jit_compile_square: 5 * 5 = 25 ✓
- test_jit_hot_path_detection: threshold detection ✓

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,15 @@ authors = ["TheFahmi"]
 rustc-hash = "1.1"
 libloading = "0.8"
 
+# JIT Compilation (Cranelift)
+cranelift = "0.95"
+cranelift-module = "0.95"
+cranelift-jit = "0.95"
+cranelift-codegen = "0.95"
+cranelift-frontend = "0.95"
+cranelift-native = "0.95"
+target-lexicon = "0.12"
+
 [[bin]]
 name = "cryo"
 path = "src/main.rs"
